# QuEST

./: .gitignore  AUTHORS.txt  CMakeLists.txt  README.md  README_BOUNTY.md  bench_swap_fusion.cpp  test_multiswap.cpp
.github/workflows/: audit.yml  compile.yml  test_free.yml  test_paid.yml
cmake/: QuESTConfig.cmake.in
docs/: cmake.md  compile.md  launch.md  tutorial.md  v4.md
examples/: CMakeLists.txt
examples/extended/: dynamics.c  dynamics.cpp  set_num_gpu_threads.c  set_num_gpu_threads.cpp  user_owned_mpi.c  user_owned_mpi.cpp  user_owned_submpi.c  user_owned_submpi.cpp
examples/isolated/: reporting_matrices.c  reporting_matrices.cpp  reporting_paulis.c  reporting_paulis.cpp  setting_errorhandler.c  setting_errorhandler.cpp
quest/include/: CMakeLists.txt  calculations.h  config.h.in  debug.h  deprecated.h  environment.h  experimental.h  modes.h  operations.h  paulis.h  precision.h  quest.h  qureg.h  subcommunicator.h  trotterisation.h  types.h
quest/src/api/: CMakeLists.txt  calculations.cpp  channels.cpp  debug.cpp  decoherence.cpp  environment.cpp  experimental.cpp  initialisations.cpp  matrices.cpp  multiplication.cpp  operations.cpp  paulis.cpp  qureg.cpp  subcommunicator.cpp  trotterisation.cpp  types.cpp
quest/src/comm/: comm_config.cpp  comm_config.hpp  comm_routines.cpp  comm_routines.hpp
quest/src/core/: accelerator.cpp  accelerator.hpp  base_qcomp.hpp  bitwise.hpp  envvars.cpp  envvars.hpp  errors.cpp  errors.hpp  fastmath.hpp  lists.hpp  localiser.cpp  localiser.hpp  parser.cpp  parser.hpp  paulilogic.cpp  paulilogic.hpp  printer.cpp  printer.hpp  randomiser.cpp  randomiser.hpp  small_list.hpp  utilities.cpp  utilities.hpp  validation.cpp  validation.hpp
quest/src/cpu/: cpu_config.cpp  cpu_qcomp.hpp  cpu_subroutines.cpp  cpu_subroutines.hpp  kahan.hpp
quest/src/gpu/: CMakeLists.txt  gpu_config.cpp  gpu_config.hpp  gpu_cuquantum.cuh  gpu_kernels.cuh  gpu_qcomp.cuh  gpu_subroutines.cpp  gpu_subroutines.hpp  gpu_thrust.cuh
tests/: CMakeLists.txt  main.cpp
tests/deprecated/: CMakeLists.txt  test_calculations.cpp  test_decoherence.cpp  test_main.cpp  test_unitaries.cpp  test_utilities.cpp  test_utilities.hpp
tests/unit/: CMakeLists.txt  debug.cpp  decoherence.cpp  environment.cpp  experimental.cpp  initialisations.cpp  operations.cpp  paulis.cpp  trotterisation.cpp
tests/utils/: cache.cpp  cache.hpp  compare.cpp  compare.hpp  config.cpp  config.hpp  linalg.cpp  linalg.hpp  random.cpp
utils/scripts/: compile.sh
